// $Id: CHANGELOG.txt,v 1.14.2.16.2.3 2008/06/23 00:52:19 morbus Exp $

Bot 6.x-1.1, 2008-xx-xx
-----------------------
  * #142812: auto reconnect and retry are now configurable (Morbus/Shiny).
  * bot_project: replaced module_exists('api') with db_table_exists().

Bot 6.x-1.x, 2008-05-01
-----------------------
  * First release for Drupal 6.x; equivalent to 5.x-1.0.

Bot 5.x-1.0, 2008-04-08
-----------------------
  * #193209: an attempt at solving seen pings has been implemented.
  * #155045: bot_seen no longer fails with "asd%" on fuzzy matching.
  * #106993: bot_seen ignores messages and actions sent to the bot.
  * #106992: bot_seen now logs actions as seenable offenses.
  * added hook_uninstall() to everything.

Bot 5.x-1.0, year 2007
----------------------
  * bot_log.module added; Logs multiple channels, day browsing, etc.
  * bot_project now has Trac integration (for tickets and revisions).
  * added another MySQL timeout preventer, thanks to killes.
  * bot_project now has configurable project.module scraping.
  * bot_project can now define URL endpoints per api branch.
  * bot_drupal renamed to bot_project, made much more generic.
  * bot: supports server passwords and channel keys, thanks to Bdragon.
  * bot_drupal: better handling of improper Doxygen summaries.
  * bot_drupal from Bdragon: integrate with api.module.
  * bot_factoid.module added; an infobot clone with all the fixins.
  * hook_irc_bot_cron() now exists and runs every five minutes.
  * #136856 and #136870 from Shiny: various PostgreSQL quote fixes.
  * bot_seen: now properly reports when it hasn't seen something.
  * bot_seen: now supports wildcard searches with * (three char minimum).
  * bot_seen: freeform "seen?" syntax is moved to direct addressing only.
  * hook_irc_bot_reply() exists to facilitate logging of own messages.
  * Issue metadata and IRC count per suggestions by ChrisKennedy.
  * bot_drupal: "Bot Drupal URLs" renamed to just "Drupal URLs".