@@ -1,7 +1,8 @@
-// $Id: CHANGELOG.txt,v 1.14.2.16.2.3 2008/06/23 00:52:19 morbus Exp $
+// $Id: CHANGELOG.txt,v 1.14.2.16.2.4 2008/06/23 01:10:39 morbus Exp $
 
 Bot 6.x-1.1, 2008-xx-xx
 -----------------------
+  * #167097: fixed undefined index and better host check (thanks czarphanguye).
   * #142812: auto reconnect and retry are now configurable (Morbus/Shiny).
   * bot_project: replaced module_exists('api') with db_table_exists().
 
